--- a/FSharp-NB.ipynb
+++ b/FSharp-NB.ipynb
@@ -44,6 +44,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Reference packages"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
@@ -58,6 +65,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Initialize `MLContext` and load the model"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
@@ -70,6 +84,13 @@
      "language": "fsharp"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Get input schema columns and define output column names"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -90,6 +111,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Create input as DataFrame"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
@@ -106,6 +134,13 @@
      "language": "fsharp"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Get predictions"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -134,7 +169,7 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"table_637674228239786537\"><thead><tr><th><i>index</i></th><th>PredictedLabel</th><th>Score</th></tr></thead><tbody><tr><td><i><div class=\"dni-plaintext\">0</div></i></td><td><div class=\"dni-plaintext\">False</div></td><td><div class=\"dni-plaintext\">-2.1337974</div></td></tr></tbody></table>"
+       "<table id=\"table_637674233055029006\"><thead><tr><th><i>index</i></th><th>PredictedLabel</th><th>Score</th></tr></thead><tbody><tr><td><i><div class=\"dni-plaintext\">0</div></i></td><td><div class=\"dni-plaintext\">False</div></td><td><div class=\"dni-plaintext\">-2.1337974</div></td></tr></tbody></table>"
       ]
      },
      "metadata": {},
