--- a/CSharp-NB.ipynb
+++ b/CSharp-NB.ipynb
@@ -19,11 +19,22 @@
    ],
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/html": ""
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Data.Analysis, 0.18.0</span></li><li><span>Microsoft.ML, 1.6.0</span></li></ul></div></div>"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Loading extensions from `Microsoft.Data.Analysis.Interactive.dll`"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "metadata": {
@@ -157,11 +168,13 @@
    ],
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/html": ""
+      "text/html": [
+       "<table id=\"table_637674233213124155\"><thead><tr><th><i>index</i></th><th>PredictedLabel</th><th>Score</th></tr></thead><tbody><tr><td><i><div class=\"dni-plaintext\">0</div></i></td><td><div class=\"dni-plaintext\">False</div></td><td><div class=\"dni-plaintext\">-1.4087648</div></td></tr></tbody></table>"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "metadata": {
